--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar bg-dark" data-bs-theme="dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">FATUM CyP</a>
+                  <a class="navbar-brand" href="#">CyP Fatum</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
