--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,25 +11,62 @@
 <body class="bg-dark">
     <section id="inicio">
         <header>
-            <nav class="navbar navbar-expand-md navbar bg-dark" data-bs-theme="dark">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">CyP Fatum</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                      </li>                      
-                    </ul>                    
-                  </div>
-                </div>
-              </nav>
-        </header>
+          <div class="contenido-header">
+            <a href="https://www.fatum.com.ar/">
+              <img src="./assets/img/logo.png" width="100rem" alt="logo" />
+            </a>
+            <nav id="nav" class="">
+              <ul id="links">
+                <li>
+                  <a
+                    href="#inicio"
+                    class="seleccionado"
+                    onclick="seleccionar(this)"
+                    >INICIO</a
+                  >
+                </li>
+                <li>
+                  <a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a>
+                </li>
+                <li>
+                  <a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a>
+                </li>
+                <li>
+                  <a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a>
+                </li>
+                <li>
+                  <a href="#contacto" onclick="seleccionar(this)">CONTACTO</a>
+                </li>
+              </ul>
+            </nav>
+            <div id="icono-nav" onclick="responsiveMenu()">
+              <i class="fa-solid fa-bars"></i>
+            </div>
+            <div class="redes">
+              <a
+                rel="noopener"
+                href="https://www.youtube.com/@mariomolinaaraoz7895"
+                target="_blank"
+                title="Youtube Channel"
+                ><i class="fa-brands fa-youtube"></i
+              ></a>
+              <a
+                rel="noopener"
+                href="https://github.com/mariomolinaaraoz"
+                target="_blank"
+                title="GitHub repository"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <a
+                rel="noopener"
+                href="https://www.instagram.com/mariomolinaaraoz/"
+                target="_blank"
+                title="Instragam"
+                ><i class="fa-brands fa-instagram-square"></i
+              ></a>
+            </div>
+          </div>
+        </header>      
     </section>
     <section id="hero">
         <div class="container">
