--- a/index.html
+++ b/index.html
@@ -1,79 +1,257 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Complete Responsive Product Landing Page Website Design Tutorial
+    </title>
+
+    <!-- google fonts cdn link  -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font awesome cdn link  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+
+    <!-- custom css file link  -->
     <link rel="stylesheet" href="./estilo.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>CyP Fatum</title>
-</head>
-<body class="bg-dark">
-    <section id="inicio">
-        <header>
-          <div class="contenido-header">
-            <a href="https://www.fatum.com.ar/">
-              <img src="./assets/img/logo.png" width="100rem" alt="logo" />
-            </a>
-            <nav id="nav" class="">
-              <ul id="links">
-                <li>
-                  <a
-                    href="#inicio"
-                    class="seleccionado"
-                    onclick="seleccionar(this)"
-                    >INICIO</a
-                  >
-                </li>
-                <li>
-                  <a href="#sobremi" onclick="seleccionar(this)">SOBRE MI</a>
-                </li>
-                <li>
-                  <a href="#servicios" onclick="seleccionar(this)">SERVICIOS</a>
-                </li>
-                <li>
-                  <a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a>
-                </li>
-                <li>
-                  <a href="#contacto" onclick="seleccionar(this)">CONTACTO</a>
-                </li>
-              </ul>
-            </nav>
-            <div id="icono-nav" onclick="responsiveMenu()">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="redes">
-              <a
-                rel="noopener"
-                href="https://www.youtube.com/@mariomolinaaraoz7895"
-                target="_blank"
-                title="Youtube Channel"
-                ><i class="fa-brands fa-youtube"></i
-              ></a>
-              <a
-                rel="noopener"
-                href="https://github.com/mariomolinaaraoz"
-                target="_blank"
-                title="GitHub repository"
-                ><i class="fa-brands fa-github"></i
-              ></a>
-              <a
-                rel="noopener"
-                href="https://www.instagram.com/mariomolinaaraoz/"
-                target="_blank"
-                title="Instragam"
-                ><i class="fa-brands fa-instagram-square"></i
-              ></a>
-            </div>
-          </div>
-        </header>      
+  </head>
+  <body>
+    <!-- section H E A D E R  -->
+    <header>
+      <a href="#" class="logo">
+        <img src="./assets/img/logo.png" alt="logo" loading="lazy" />
+      </a>
+      <div id="menu" class="fas fa-bars"></div>
+      <nav class="navbar">
+        <ul>
+          <li><a class="active" href="#home">Inicio</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#features">Carácteristicas</a></li>
+          <li><a href="#product">Oportunidades</a></li>
+          <li><a href="#contact">Contacto</a></li>
+          <!-- <li><a href="#faq">FAQ</a></li> -->
+        </ul>
+      </nav>
+    </header>
+
+    <!-- section H O M E  -->
+    <section class="home" id="home">
+      <div class="content">
+        <h1>
+          El mejor servicio de cortes y plegado de chapas para tus proyectos
+        </h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+          earum aliquid ullam, impedit sunt tempora a! Animi nihil sunt beatae.
+        </p>
+        <a href="#"><button class="btn">Hace tu pedido</button></a>
+      </div>
+      <div id="burbuja-2">
+        <img src="./assets/img/img-2.jpg" alt="" />
+      </div>
+      <div id="burbuja-1">
+        <img src="./assets/img/img-1.jpg" alt="" />
+      </div>
     </section>
-    <section id="hero">
-        <div class="container">
-            <div class="bg-dark text-primary fs-1">hello world</div>
+
+    <!-- section A B O U T  -->
+    <section class="about" id="about">
+      <div class="image">
+        <img src="./assets/img/logo.png" alt="" />
+      </div>
+
+      <div class="content">
+        <h1 class="heading">Nosotros</h1>
+        <h3>Destaca tus proyectos con nuestros servicios de calidad</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus
+          laborum quia, ducimus vel consequatur consequuntur perferendis
+          necessitatibus obcaecati quos quis.
+        </p>
+        <ul>
+          <li>
+            <i class="fas fa-check-double"></i> Gran variedad de espesores para
+            plegado
+          </li>
+          <li>
+            <i class="fas fa-check-double"></i> Trabajamos con una amplia gama
+            de materiales
+          </li>
+          <li>
+            <i class="fas fa-check-double"></i> Sin limitaciones de diseño
+          </li>
+          <li>
+            <i class="fas fa-check-double"></i> Asesoramiento con especialista
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- section F E A T U R E S  -->
+    <section class="features" id="features">
+      <h1 class="heading">Carácteristicas de nuestros servicios</h1>
+
+      <!-- <h1 class="title">new and outstanding features</h1> -->
+
+      <p class="description">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet
+        molestiae repellat labore possimus velit ex aperiam sequi atque veniam
+        consectetur.
+      </p>
+
+      <div class="box-container">
+        <div class="box">
+          <i class="fas fa-sort-amount-up"></i>
+          <h3>Gran Variedad De Espesores Para Plegado</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+            doloribus asperiores neque facere magni fugiat labore ipsum
+            provident sed numquam.
+          </p>
         </div>
+        <div class="box">
+          <i class="fas fa-object-ungroup"></i>
+          <h3>Trabajamos Con Una Amplia Gama De Materiales</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+            doloribus asperiores neque facere magni fugiat labore ipsum
+            provident sed numquam.
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-crop"></i>
+          <h3>Sin limitaciones de diseño</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+            doloribus asperiores neque facere magni fugiat labore ipsum
+            provident sed numquam.
+          </p>
+        </div>
+        <div class="box">
+          <i class="fas fa-headset"></i>
+          <h3>Asesoramiento Con Especialista</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti
+            doloribus asperiores neque facere magni fugiat labore ipsum
+            provident sed numquam.
+          </p>
+        </div>
+      </div>
     </section>
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+
+    <!-- section P R O D U C T S  -->
+    <section class="product" id="product">
+      <h1 class="heading">Oportunidades</h1>
+
+      <h1 class="title">Tienda de Oportunidades relámpago!!!</h1>
+
+      <div class="box-container">
+        <div class="box">
+          <h3>Marcos de puerta</h3>
+          <img src="images/product-1.png" alt="" />
+          <span class="price">$50/-</span>
+          <a href="#"><button class="btn">Comprar</button></a>
+        </div>
+
+        <div class="box">
+          <h3>Puerta doble contacto</h3>
+          <img src="images/product-2.png" alt="" />
+          <span class="price">$40/-</span>
+          <a href="#"><button class="btn">Comprar</button></a>
+        </div>
+
+        <div class="box">
+          <h3>Perfiles C Galv.</h3>
+          <img src="images/product-3.png" alt="" />
+          <span class="price">$60/-</span>
+          <a href="#"><button class="btn">Comprar</button></a>
+        </div>
+
+        <div class="box">
+          <h3>Bandejas inox.</h3>
+          <img src="images/product-4.png" alt="" />
+          <span class="price">$55/-</span>
+          <a href="#"><button class="btn">Comprar</button></a>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <h1 class="heading">Contacto</h1>
+
+      <h1 class="title">concreta tu proyecto, realiza tu consulta</h1>
+
+      <form action="">
+        <div class="inputBox">
+          <input type="text" placeholder="Nombre" />
+          <input type="text" placeholder="Apellido" />
+        </div>
+
+        <div class="inputBox">
+          <input type="email" placeholder="email" />
+          <!-- <input type="password" placeholder="your password" /> -->
+        </div>
+
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="mensaje"
+        ></textarea>
+
+        <input type="submit" value="Enviar" class="btn" />
+      </form>
+    </section>
+
+<!-- section F O O T E R  -->
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>Porque elerginos?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+            libero ea repellendus aut commodi, sequi praesentium! Neque aliquam
+            excepturi quas.
+          </p>
+        </div>
+
+        <div class="box">
+          <h3>Enlaces</h3>
+          <a href="#">Inicio</a>
+          <a href="#">Nosotros</a>
+          <a href="#">Carácteristicas</a>
+          <a href="#">Oportunidades</a>
+          <a href="#">Contacto</a>
+        </div>
+
+        <div class="box">
+          <h3>Contactanos</h3>
+          <p><i class="fas fa-map-marker-alt"></i> Santiago 2675, San Miguel de Tucumán, Tucumán</p>
+          <p><i class="fas fa-globe"></i> www.fatumcyp.com.ar</p>
+          <p><i class="fas fa-phone"></i> +381 621-1973</p>
+        </div>
+      </div>
+
+      <h1 class="credit">
+        Diseñado por <a href="#">Mario Molina</a> | all rights reserved.
+      </h1>
+    </section>
+
+    <!-- footer section ends -->
+
+    <!-- jquery cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- custom js file link  -->
+    <script src="./script.js"></script>
+  </body>
 </html>
