--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Complete Responsive Product Landing Page Website Design Tutorial
+      Corte y Plegado FATUM
     </title>
 
     <!-- google fonts cdn link  -->
@@ -184,6 +184,7 @@
       </div>
     </section>
 
+    <!-- section C O N T A C T  -->
     <section class="contact" id="contact">
       <h1 class="heading">Contacto</h1>
 
@@ -212,7 +213,7 @@
       </form>
     </section>
 
-<!-- section F O O T E R  -->
+    <!-- section F O O T E R  -->
     <section class="footer">
       <div class="box-container">
         <div class="box">
@@ -246,7 +247,6 @@
       </h1>
     </section>
 
-    <!-- footer section ends -->
 
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
